Fix font getting cut off

--- a/frontend/src/components/application/ApplicationCard.module.scss
+++ b/frontend/src/components/application/ApplicationCard.module.scss
@@ -42,6 +42,7 @@
       text-overflow: ellipsis;
       white-space: nowrap;
       overflow: hidden;
+      line-height: 1.1;
     }
 
     p {
